--- a/index.html
+++ b/index.html
@@ -4,9 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel= "stylesheet" href="style.css" />
+    <script src="https://d3js.org/d3.v5.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="title">
+<h1>MY NAME IS <br>
+SOPHIA MEIER</h1>
+</div>
+<div class="subtitle" >
+    <h2>This is a reflection of me <br>
+    Scroll to see...</h2>
+</div>
+<div class="color1">
+<div class="transition1">
+    <h1>Anātman: no self exists in the sense of a permanent substance
+        within an individual existent.
+    </h1>
+</div>
+</div>
+<div class="section1">
+    <div class="sticky_element">
+        <h3>An Overview</h3>
+    </div>
+    <div class="box">
+        <h3>About me</h3>
+        <p>Hi, I'm Sophia Meier, a junior at Brebeuf Jesuit
+            Prepatory School.</p>
+    </div>
+    <div class="box">
+        <h3>Skills</h3>
+        <p>Working Proficiency in French</p>
+        <p>Proficient in HTML, CSS, Javascript, Java</p>
+        <p>violinist</p>
+    </div>
+    <div class="box">
+        <h3>Employment</h3>
+        <p>Seasonal Lifeguard</p>
+        <p>Swim instructor</p>
+        <p>Nextech Catapult</p>
+    </div>
+    <div class="box">
+        <h3>Leadership</h3>
+        <p>Brebeuf Coding Club President</p>
+        <p>Band and Orchestra Leadership Team</p>
+    </div>
+</div>
+
+<div class="color2">
+</div>
 </body>
 </html>
