--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel= "stylesheet" href="style.css" />
-    <script src="https://d3js.org/d3.v5.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -13,11 +13,11 @@
 <h1>MY NAME IS <br>
 SOPHIA MEIER</h1>
 </div>
-<div class="subtitle" >
+<div class="subtitle" id="transition">
     <h2>This is a reflection of me <br>
     Scroll to see...</h2>
 </div>
-<div class="color1">
+<div class="color1" id="transition">
 <div class="transition1">
     <h1>Anātman: no self exists in the sense of a permanent substance
         within an individual existent.
@@ -26,12 +26,9 @@ SOPHIA MEIER</h1>
 </div>
 <div class="section1">
     <div class="sticky_element">
-        <h3>An Overview</h3>
+        <div class="words">
+        <h3>My resume, essentially.</h3>
     </div>
-    <div class="box">
-        <h3>About me</h3>
-        <p>Hi, I'm Sophia Meier, a junior at Brebeuf Jesuit
-            Prepatory School.</p>
     </div>
     <div class="box">
         <h3>Skills</h3>
@@ -46,13 +43,33 @@ SOPHIA MEIER</h1>
         <p>Nextech Catapult</p>
     </div>
     <div class="box">
-        <h3>Leadership</h3>
-        <p>Brebeuf Coding Club President</p>
-        <p>Band and Orchestra Leadership Team</p>
+        <h3>Extracurriculars</h3>
+        <p>Brebeuf Coding Club (president)</p>
+        <p>Orchestra (leadership team)</p>
+        <p>Working at local food pantry gardens (2hrs/week)</p>
+        <p>Breakfast Club (making & serving breakfast to the homeless
+            every Thursday at 5am)
+        </p>
+    </div>
+<div class="box">
+        <h3>Athletics</h3>
+        <p>Varsity cross country & track</p>
     </div>
 </div>
-
-<div class="color2">
+<div class="color2"></div>
+<div class="bigBox">
+<div class="section2">
+    <div class="box2" id="boxA">
+        <h3>words</h3>
+        </div>
+    <div class="box2" id="boxB">
+        <h3>words</h3>
+        </div>
+    <div class="box2" id="boxC">
+        <h3>words</h3>
+        </div>
+    </div>
 </div>
+<script src="script.js"></script> 
 </body>
 </html>
