--- a/index.html
+++ b/index.html
@@ -56,19 +56,49 @@ SOPHIA MEIER</h1>
         <p>Varsity cross country & track</p>
     </div>
 </div>
-<div class="color2"></div>
+<!--<div class="color2"></div>-->
 <div class="bigBox">
-<div class="section2">
-    <div class="box2" id="boxA">
-        <h3>words</h3>
+    <div class="section2"></div>
+    <div class="boxes">
+        <div class="box2" id="boxA">
+            <h3>words</h3>
         </div>
-    <div class="box2" id="boxB">
-        <h3>words</h3>
+        <div class="box2" id="boxB">
+            <h3>words</h3>
         </div>
-    <div class="box2" id="boxC">
-        <h3>words</h3>
+        <div class="box2" id="boxC">
+            <h3>words</h3>
         </div>
     </div>
+    </div>
+<div class="random"></div>
+<div class="create">
+<div class="col">
+    <div class="colTitle">
+    <h1 id="specific">C</h1>
+</div>
+</div>
+<div class="col">
+    <div class="colTitle">
+    <h1 id="specific">R</h1>
+    </div>
+</div>
+<div class="col">
+    <div class="colTitle">
+    <h1 id="specific">E</h1>
+    </div>
+    <div class="colTitle">
+    <h1 id="specific">T</h1>
+    </div>
+</div>
+<div class="col">
+    <div class="colTitle">
+    <h1 id="specific">A</h1>
+    </div>
+    <div class="colTitle">
+    <h1 id="specific">E</h1>
+    </div>
+</div>
 </div>
 <script src="script.js"></script> 
 </body>
