--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="title">
+<div class="title">
 <h1>MY NAME IS <br>
 SOPHIA MEIER</h1>
 </div>
@@ -17,13 +17,14 @@ SOPHIA MEIER</h1>
     <h2>This is a reflection of me <br>
     Scroll to see...</h2>
 </div>
-<div class="color1" id="transition">
+<div class="color1">
 <div class="transition1">
-    <h1>Anātman: no self exists in the sense of a permanent substance
+    <h1 class="thing">Anātman: no self exists in the sense of a permanent substance
         within an individual existent.
     </h1>
 </div>
 </div>
+<div class="colorfill"></div>
 <div class="section1">
     <div class="sticky_element">
         <div class="words">
@@ -34,7 +35,7 @@ SOPHIA MEIER</h1>
         <h3>Skills</h3>
         <p>Working Proficiency in French</p>
         <p>Proficient in HTML, CSS, Javascript, Java</p>
-        <p>violinist</p>
+        <p>Playing violin</p>
     </div>
     <div class="box">
         <h3>Employment</h3>
@@ -56,6 +57,7 @@ SOPHIA MEIER</h1>
         <p>Varsity cross country & track</p>
     </div>
 </div>
+</div>
 <!--<div class="color2"></div>-->
 <div class="bigBox">
     <div class="section2"></div>
@@ -74,30 +76,55 @@ SOPHIA MEIER</h1>
 <div class="random"></div>
 <div class="create">
 <div class="col">
-    <div class="colTitle">
+    <div class="colTitle0">
     <h1 id="specific">C</h1>
 </div>
+<div class="project">
+    <a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/5637481737371648"
+    target="_blank">
+      <img class="bunny" src="img/bunny.jpeg">
+    </a>
+  </div>
+  <div class="project">
+    <a href="https://intro-unit-2-project-sophia-meier--sophiameier1.repl.co"
+    target="_blank">
+      <img class="adhd" src="img/adhd.jpeg">
+    </a>
+  </div>
 </div>
 <div class="col">
-    <div class="colTitle">
+    <div class="colTitle1">
     <h1 id="specific">R</h1>
     </div>
+      <div class="project">
+        <a href="https://unit-5-project--sophiameier1.repl.co"
+        target="_blank">
+          <img class="adventure" src="img/adventure.jpeg">
+        </a>
+      </div>
 </div>
 <div class="col">
-    <div class="colTitle">
+    <div class="colTitle2">
     <h1 id="specific">E</h1>
     </div>
-    <div class="colTitle">
-    <h1 id="specific">T</h1>
+    <div class="colTitle3">
+    <h1 id="specific2">T</h1>
     </div>
+    <div class="project">
+        <a href="https://www.khanacademy.org/computer-programming/nanostride/4866015598428160"
+        target="_blank">
+          <img class="nanostride" src="img/nanostride.jpeg">
+        </a>
+      </div>
 </div>
-<div class="col">
-    <div class="colTitle">
+<div class="col" id="lastCol">
+    <div class="colTitle4">
     <h1 id="specific">A</h1>
     </div>
-    <div class="colTitle">
-    <h1 id="specific">E</h1>
+    <div class="colTitle5">
+    <h1 id="specific2">E</h1>
     </div>
+</div>
 </div>
 </div>
 <script src="script.js"></script> 
