--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Document</title>
 </head>
 <body>
+<div id="scrollbar"></div>
 <div class="title">
 <h1>MY NAME IS <br>
 SOPHIA MEIER</h1>
@@ -35,19 +36,20 @@ SOPHIA MEIER</h1>
         <h3>Skills</h3>
         <p>Working Proficiency in French</p>
         <p>Proficient in HTML, CSS, Javascript, Java</p>
-        <p>Playing violin</p>
+        <p>violin, creative writing</p>
+
     </div>
     <div class="box">
         <h3>Employment</h3>
         <p>Seasonal Lifeguard</p>
-        <p>Swim instructor</p>
+        <p>Swim instructor (3 classes/week) </p>
         <p>Nextech Catapult</p>
     </div>
     <div class="box">
         <h3>Extracurriculars</h3>
         <p>Brebeuf Coding Club (president)</p>
         <p>Orchestra (leadership team)</p>
-        <p>Working at local food pantry gardens (2hrs/week)</p>
+        <p>Volunteering at local food pantry gardens (2hrs/week)</p>
         <p>Breakfast Club (making & serving breakfast to the homeless
             every Thursday at 5am)
         </p>
@@ -63,61 +65,44 @@ SOPHIA MEIER</h1>
     <div class="section2"></div>
     <div class="boxes">
         <div class="box2" id="boxA">
-            <h3>words</h3>
+            <h3>Technical</h3>
+
         </div>
         <div class="box2" id="boxB">
-            <h3>words</h3>
+            <h3>Interests</h3>
+            <!--<p>computer science</p>
+            <p>kinesiology</p>
+            <p>anthropology</p>
+            <p>botany</p>
+            <p>quantum physics</p>-->
+
         </div>
         <div class="box2" id="boxC">
-            <h3>words</h3>
+            <h3>Conceptual</h3>
         </div>
     </div>
     </div>
 <div class="random"></div>
 <div class="create">
-<div class="col">
+<div class="col" id="col0">
     <div class="colTitle0">
     <h1 id="specific">C</h1>
 </div>
-<div class="project">
-    <a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/5637481737371648"
-    target="_blank">
-      <img class="bunny" src="img/bunny.jpeg">
-    </a>
-  </div>
-  <div class="project">
-    <a href="https://intro-unit-2-project-sophia-meier--sophiameier1.repl.co"
-    target="_blank">
-      <img class="adhd" src="img/adhd.jpeg">
-    </a>
-  </div>
 </div>
-<div class="col">
+<div class="col" id="col1">
     <div class="colTitle1">
     <h1 id="specific">R</h1>
     </div>
-      <div class="project">
-        <a href="https://unit-5-project--sophiameier1.repl.co"
-        target="_blank">
-          <img class="adventure" src="img/adventure.jpeg">
-        </a>
-      </div>
 </div>
-<div class="col">
+<div class="col" id="col2">
     <div class="colTitle2">
     <h1 id="specific">E</h1>
     </div>
     <div class="colTitle3">
     <h1 id="specific2">T</h1>
     </div>
-    <div class="project">
-        <a href="https://www.khanacademy.org/computer-programming/nanostride/4866015598428160"
-        target="_blank">
-          <img class="nanostride" src="img/nanostride.jpeg">
-        </a>
-      </div>
 </div>
-<div class="col" id="lastCol">
+<div class="col" id="col3">
     <div class="colTitle4">
     <h1 id="specific">A</h1>
     </div>
@@ -127,6 +112,38 @@ SOPHIA MEIER</h1>
 </div>
 </div>
 </div>
+<div class="project">
+    <a href="https://www.khanacademy.org/computer-programming/spin-off-of-project-animal-attack/5637481737371648" target="_blank">
+    <p>First Javascript Project: "Animal Attack"</p>
+  </a>
+  <a href="https://www.khanacademy.org/computer-programming/nanostride/4866015598428160" target="_blank">
+    <p>Exercise Social Media Concept: "Nanostride"</p>
+  </a>
+  <a href="https://intro-unit-2-project-sophia-meier--sophiameier1.repl.co" target="_blank">
+      <p>Informative Website: "Understanding ADHD In Girls"</p>
+    </a>
+    <a href="https://unit-5-project--sophiameier1.repl.co" target="_blank">
+      <p>Choose Your Own Adventure: "Into The Woods"</p>
+    </a>
+    <a href="https://unit-5-project--sophiameier1.repl.co" target="_blank">
+        <p>Mock-Buzzfeed Quiz: "Which character troupe are you?"</p>
+      </a>
+  </div>
+  <div class="last_transition"></div>
+  <div class="contacts">
+    <h5>CONTACT ME:</h5>
+    <div class="info">
+        <div class="email">
+            <img id="icon1" src="img/email2.png">
+        <p class="email_words">meier.sophiaiz@gmail.com</p>
+    </div>
+        <div class="phone"> 
+            <img id="icon2" src="img/PHONE.png">
+        <p class="phone_words">419-309-6167</p>
+    </div>
+    </div>
+</div>
+  </div>
 <script src="script.js"></script> 
 </body>
 </html>
