--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 <div id="scrollbar"></div>
-<div class="title">
+<div class="title" id="title">
 <h1>MY NAME IS <br>
 SOPHIA MEIER</h1>
 </div>
@@ -36,7 +36,6 @@ SOPHIA MEIER</h1>
         <h3>Skills</h3>
         <p>Working Proficiency in French</p>
         <p>Proficient in HTML, CSS, Javascript, Java</p>
-        <p>violin, creative writing</p>
 
     </div>
     <div class="box">
@@ -65,20 +64,31 @@ SOPHIA MEIER</h1>
     <div class="section2"></div>
     <div class="boxes">
         <div class="box2" id="boxA">
-            <h3>Technical</h3>
-
+            <h3>Hobbies</h3>
+            <div class="night">
+            <p class="star">violin</p>
+            <p class="star">creative writing</p>
+            <p class="star">reading books</p>
+        </div>
         </div>
         <div class="box2" id="boxB">
-            <h3>Interests</h3>
-            <!--<p>computer science</p>
-            <p>kinesiology</p>
-            <p>anthropology</p>
-            <p>botany</p>
-            <p>quantum physics</p>-->
+            <h3>Career Plans</h3>
+            <div class="night">
 
+                <p class="star1">Undecided</p>
+                <p class="star1">I love learning & pushing the boundaries of what is possible.
+                </p>
+                <p class="star1">I want to create something that lasts.</p>
+            </div>
         </div>
         <div class="box2" id="boxC">
-            <h3>Conceptual</h3>
+            <h3>Interests</h3>
+            <div class="night">
+                <p class="star">computer science</p>
+                <p class="star">botany</p>
+                <p class="star">kinesiology</p>
+                
+            </div>
         </div>
     </div>
     </div>
@@ -126,24 +136,26 @@ SOPHIA MEIER</h1>
       <p>Choose Your Own Adventure: "Into The Woods"</p>
     </a>
     <a href="https://unit-5-project--sophiameier1.repl.co" target="_blank">
-        <p>Mock-Buzzfeed Quiz: "Which character troupe are you?"</p>
+        <p>Mock-Buzzfeed Quiz: "Which character trope are you?"</p>
       </a>
   </div>
   <div class="last_transition"></div>
+  <div class="contact_center">
   <div class="contacts">
-    <h5>CONTACT ME:</h5>
-    <div class="info">
-        <div class="email">
-            <img id="icon1" src="img/email2.png">
-        <p class="email_words">meier.sophiaiz@gmail.com</p>
+    <div class="contact_me">
+        <a class="hidden" href="mailto:meier.sophiaiz@gmail.com">
+        <h5 id="last1"class="con">Contact me</h5>
+    </a>
     </div>
-        <div class="phone"> 
-            <img id="icon2" src="img/PHONE.png">
-        <p class="phone_words">419-309-6167</p>
-    </div>
-    </div>
+    <div class="thing2">
+        <a id="toTop"class="hidden" href="index.html#title">
+        <h5 id="last2" class="con">Back to Top</h5>
+    </a>
+        </div>
+<div>
 </div>
-  </div>
+</div>
+</div>
 <script src="script.js"></script> 
 </body>
 </html>
