--- a/index.html
+++ b/index.html
@@ -26,36 +26,40 @@ SOPHIA MEIER</h1>
 </div>
 </div>
 <div class="colorfill"></div>
-<div class="section1">
-    <div class="sticky_element">
+<div class="section1" id="transition">
         <div class="words">
-        <h3>My resume, essentially.</h3>
+            <div class="words2">
+            <img class="profile"src="img/hi.jpeg">
+            <div class="actual">
+        <h5 class="h5style">Hi, I'm junior at Brebeuf Jesuit. This is a picture of my face.</h5>
+</div>
     </div>
     </div>
+    
     <div class="box">
-        <h3>Skills</h3>
-        <p>Working Proficiency in French</p>
-        <p>Proficient in HTML, CSS, Javascript, Java</p>
+        <h3 class="list_h3">Skills</h3>
+        <p class="list_p">Working Proficiency in French</p>
+        <p class="list_p">Proficient in HTML, CSS, Javascript, Java</p>
+    </div>
 
+    <div class="box">
+        <h3 class="list_h3">Employment</h3>
+        <p class="list_p">Seasonal Lifeguard</p>
+        <p class="list_p">Swim instructor (3 classes/week) </p>
+        <p class="list_p">Nextech Catapult</p>
     </div>
     <div class="box">
-        <h3>Employment</h3>
-        <p>Seasonal Lifeguard</p>
-        <p>Swim instructor (3 classes/week) </p>
-        <p>Nextech Catapult</p>
-    </div>
-    <div class="box">
-        <h3>Extracurriculars</h3>
-        <p>Brebeuf Coding Club (president)</p>
-        <p>Orchestra (leadership team)</p>
-        <p>Volunteering at local food pantry gardens (2hrs/week)</p>
-        <p>Breakfast Club (making & serving breakfast to the homeless
+        <h3 class="list_h3">Extracurriculars</h3>
+        <p class="list_p">Brebeuf Coding Club (president)</p>
+        <p class="list_p">Orchestra (leadership team)</p>
+        <p class="list_p">Volunteering at local food pantry gardens (2hrs/week)</p>
+        <p class="list_p">Breakfast Club (making & serving breakfast to the homeless
             every Thursday at 5am)
         </p>
     </div>
 <div class="box">
-        <h3>Athletics</h3>
-        <p>Varsity cross country & track</p>
+        <h3 class="list_h3">Athletics</h3>
+        <p class="list_p">Varsity cross country & track</p>
     </div>
 </div>
 </div>
@@ -132,7 +136,7 @@ SOPHIA MEIER</h1>
   <a href="https://intro-unit-2-project-sophia-meier--sophiameier1.repl.co" target="_blank">
       <p>Informative Website: "Understanding ADHD In Girls"</p>
     </a>
-    <a href="https://unit-5-project--sophiameier1.repl.co" target="_blank">
+    <a href="choose/1.html" target="_blank">
       <p>Choose Your Own Adventure: "Into The Woods"</p>
     </a>
     <a href="https://unit-5-project--sophiameier1.repl.co" target="_blank">
