--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ SOPHIA MEIER</h1>
             <div class="words2">
             <img class="profile"src="img/hi.jpeg">
             <div class="actual">
-        <h5 class="h5style">Hi, I'm junior at Brebeuf Jesuit. This is a picture of my face.</h5>
+        <h5 class="h5style">Hi, I'm a junior at Brebeuf Jesuit. This is a picture of my face.</h5>
 </div>
     </div>
     </div>
